human-intervention-logs/org.apache.logging.log4j:log4j-core:2.17.1/gradle-test/gradle-test-2026-05-20T11-31-55-391192Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.logging.log4j:log4j-core:2.17.1
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible and 30 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/tests/src/org.apache.logging.log4j/log4j-core/2.17.1/src/test/java/org_apache_logging_log4j/log4j_core/ContextDataFactoryTest.java:39: error: reference to assertThat is ambiguous
        assertThat(defaultContextData.getValue("default")).isEqualTo("value");
        ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/tests/src/org.apache.logging.log4j/log4j-core/2.17.1/src/test/java/org_apache_logging_log4j/log4j_core/ContextDataFactoryTest.java:40: error: reference to assertThat is ambiguous
        assertThat(initialCapacityContextData.getValue("capacity")).isEqualTo("value");
        ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/tests/src/org.apache.logging.log4j/log4j-core/2.17.1/src/test/java/org_apache_logging_log4j/log4j_core/ContextDataFactoryTest.java:41: error: reference to assertThat is ambiguous
        assertThat(copiedContextData.getValue("copy")).isEqualTo("value");
        ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/tests/src/org.apache.logging.log4j/log4j-core/2.17.1/src/test/java/org_apache_logging_log4j/log4j_core/ContextDataFactoryTest.java:39: error: reference to assertThat is ambiguous
          assertThat(defaultContextData.getValue("default")).isEqualTo("value");
          ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/tests/src/org.apache.logging.log4j/log4j-core/2.17.1/src/test/java/org_apache_logging_log4j/log4j_core/ContextDataFactoryTest.java:40: error: reference to assertThat is ambiguous
          assertThat(initialCapacityContextData.getValue("capacity")).isEqualTo("value");
          ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/tests/src/org.apache.logging.log4j/log4j-core/2.17.1/src/test/java/org_apache_logging_log4j/log4j_core/ContextDataFactoryTest.java:41: error: reference to assertThat is ambiguous
          assertThat(copiedContextData.getValue("copy")).isEqualTo("value");
          ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 5s
> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/tests/src/org.apache.logging.log4j/log4j-core/2.17.1/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2160-a6e96de1/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.logging.log4j:log4j-core:2.17.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
9 actionable tasks: 1 executed, 8 up-to-date
